--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
             <optgroup label="Espacios públicos, seguridad, recreación"></optgroup>
             <option id="DxP_EP" value="DxP_EP">Proximidad espacio público</option>  
             <option id="Dens_Res" value="Dens_Res" selected>Densidad residencial</option> 
+            <option id="T_Homici_2" value="T_Homici_2">Tasa de homicidios</option> 
             <option id="Shannon" value="Shannon">Diversidad usos del suelo</option> 
             </optgroup> 
             <optgroup label="Oportunidades económicas"></optgroup>
